[package]
name = "nannou_geom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.22", default-features = false, features = [
    "num-traits",
    "rand",
] }
num-traits = { version = "0.2", default-features = false }
palette = { version = "0.5", default-features = false, features = ["named"] }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

[features]
default = ["std"]
libm = ["glam/libm", "num-traits/libm", "palette/libm"]
serde = ["glam/serde", "palette/serializing"]
std = ["glam/std", "num-traits/std", "palette/std", "rand/std", "rand/std_rng"]
